<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.michaelederaut</groupId>
  <artifactId>Selenium_WebDriver_3</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
 <properties>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <java.home>{$env.JAVA_HOME}</java.home>
</properties>
  
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
            <source>17</source>
            <target>17</target>
            <excludes>
                <exclude>**/_archive/</exclude>
            </excludes>
        </configuration>
      </plugin>
    </plugins>

    <resources>
        <resource>
            <directory>src/main/resources</directory>
        </resource>
        <resource>
            <directory>src/test/resources</directory>
        </resource>
    </resources>
  </build>
  
 <repositories>
 <!--   <repository>
     <id>Saxon Dom4j</id>
       <name>Saxon Dom4j Shell-Repo</name>
       <url>https://mvnrepository.com/artifact/net.sf.saxon/saxon-dom4j</url>
       <releases>   
          <updatePolicy>never</updatePolicy>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository> -->

 <!--   <repository>
      <id>WSO02</id>
      <name>espacially for jaxon</name>
      <url>https://mvnrepository.com/repos/wso2</url>
      <releases>   
          <updatePolicy>never</updatePolicy>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository> -->
    
    <repository>
      <id>RedHat GA</id>
      <name>Redhat alternative to Maven-Central</name>
      <url>https://maven.repository.redhat.com/ga/</url>
    </repository>
    <repository>
      <id>Atlassian_3rd_party</id>
      <name>Atlassian 3rd-Party Repository</name>
      <url>https://maven.atlassian.com/3rdparty/</url>
    </repository> 
    
    <repository>
       <id>in-project</id>
       <name>In Project Repo</name>
       <url>file://${java.home}/lib/jrt-fs.jar</url>
    </repository>
 </repositories>
  
 <dependencies>
  <!-- https://mvnrepository.com/artifact/com.github.tommyettinger/regexodus -->
      <dependency>
         <groupId>com.github.tommyettinger</groupId>
         <artifactId>regexodus</artifactId>
         <version>0.1.10</version>
      </dependency>

    <dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>3.10</version>    
    </dependency> 
   
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-text</artifactId>
    <version>1.3</version>
    </dependency>
     
   
   <!-- https://mvnrepository.com/artifact/com.sun.jna/jna -->
<!-- <dependency>
    <groupId>com.sun.jna</groupId>
    <artifactId>jna</artifactId>
    <version>4.0.0</version>
</dependency> -->
   
<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform -->
<dependency>
    <groupId>net.java.dev.jna</groupId>
    <artifactId>jna-platform</artifactId>
    <version>4.0.0</version>
</dependency>
   
   
<dependency>
   <!-- https://mvnrepository.com/artifact/junit/junit -->
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.12</version>
</dependency>
   
 <!--   <dependency>
    <groupId>com.github.tommyettinger</groupId>
    <artifactId>regexodus</artifactId>
    <version>0.1.10</version> 
</dependency> -->

<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-junit -->
<dependency>
    <groupId>org.hamcrest</groupId>
    <artifactId>hamcrest-junit</artifactId>
    <version>2.0.0.0</version>
    <scope>test</scope>
</dependency>

<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest -->
<dependency>
    <groupId>org.hamcrest</groupId>
    <artifactId>java-hamcrest</artifactId>
    <version>2.0.0.0</version>
    <scope>test</scope>
</dependency>
   
<dependency>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-api</artifactId>
   <version>2.8</version>
   </dependency>
    <dependency>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-core</artifactId>
   <version>2.8</version>
</dependency>
   
   <!--  css to xpath -->
   <!--  www.jooq.org/products/jOOX/javadoc/1.2.0/org/joox/selector/CSS2XPath.html -->
   <!--  https://javalibs.com/artifact/org.jooq/joox -->
   <!--  https://github.com/jOOQ/jOOX/tree/master/jOOX/src/main/java/org/joox/selector -->
 <!--    <dependency>
    <groupId>org.jooq</groupId>
    <artifactId>joox</artifactId>
    <version>1.6.0</version>
    </dependency> -->
   
   <!--  https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
  <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>3.141.59</version>
  </dependency>

<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
<!-- bcs of org.w3c.dom.CharacterData -->
<!-- <dependency>
    <groupId>org.dom4j</groupId>
    <artifactId>dom4j</artifactId>
    <version>2.1.0</version>
</dependency> -->


<!-- https://mvnrepository.com/artifact/net.sf.saxon/saxon-xpath -->
<!--  mvn install:install-file -DgroupId=net.sf.saxon -DartifactId=saxon -Dversion=8.9 -Dpackaging=jar -Dfile=G:\var\mvn\repo\net\sf\saxon\saxon-xpath\8.9\saxon-xpath-8.9.jar -->
<dependency>
    <groupId>net.sf.saxon</groupId>
    <artifactId>saxon-xpath</artifactId>
    <version>8.9</version>
     <!--  <version>8.7</version> -->
</dependency>

<!-- http://dist.wso2.org/maven2/net/sf/saxon/saxon-dom4j/8.9/ -->
<!-- https://mvnrepository.com/artifact/net.sf.saxon/saxon-dom4j -->
 <dependency>
    <groupId>net.sf.saxon</groupId>
    <artifactId>saxon-dom4j</artifactId>
    <version>8.9</version>
</dependency> 

<!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
<!-- http://grepcode.com/project/repo1.maven.org/maven2/net.sf.saxon/Saxon-HE/ -->
<dependency>
    <groupId>net.sf.saxon</groupId>
    <artifactId>Saxon-HE</artifactId>
 <!--     <version>9.8.0-6</version> --> 
  <version>9.8.0-6</version> 
 <!--    <version>9.5.1-2</version>  -->
</dependency>

<!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
<dependency>
    <groupId>jaxen</groupId>
    <artifactId>jaxen</artifactId>
    <version>1.2.0-atlassian-2</version>
</dependency>

<!-- bcs of org.w3c.dom.CharacterData -->
<!-- https://mvnrepository.com/artifact/xalan/xalan -->
<dependency>
	   <groupId>xalan</groupId>
	   <artifactId>xalan</artifactId>
	   <version>2.7.2</version>
	   <exclusions>
	   <exclusion>
	      <groupId>xml-apis</groupId>
           <artifactId>xml-apis</artifactId>
	   </exclusion>
	   </exclusions>
	</dependency> 
 
   <!--  <dependency>
     <groupId>net.sf.saxon</groupId>
     <artifactId>Saxon-Repack</artifactId>
     <version>9.8.0-6</version>
   </dependency> -->
 
 <!-- https://mvnrepository.com/artifact/org.openjdk.nashorn/nashorn-core -->
<dependency>
    <groupId>org.openjdk.nashorn</groupId>
    <artifactId>nashorn-core</artifactId>
    <version>15.3</version>
</dependency>

 
 <dependency>
    <groupId>com.github.michaelederaut</groupId>
    <artifactId>basics</artifactId>
    <version>0.0.1-SNAPSHOT</version>
 </dependency>
   
</dependencies>

</project>